syntax = "proto3";

package EpidemicBroadcastService;

import "google/protobuf/any.proto";

message Rumor {
  int64 counter = 1;
  google.protobuf.Any payload = 2;
}

message PushResponse {}

message PullRequest {}

service Gossiper {
  rpc Push (stream Rumor) returns (PushResponse) {}
  rpc Pull (PullRequest) returns (stream Rumor) {}
}
